# CardSpace

./: .gitignore  CMakeLists.txt  README.md  basic_analysis.ipynb
apps/: CMakeLists.txt  main.cpp  query_main.cpp
docs/: CMakeLists.txt
include/: Card.hpp  CardColor.hpp  CardLegality.hpp  CardType.hpp  PrintedCard.hpp  README.md  card_parser.hpp  etl_pipeline.hpp  loader.hpp  scryfall_client.hpp  transformer.hpp  utils.hpp  warehouse.hpp
notebooks/: basic_analysis.ipynb
src/: CMakeLists.txt  CardColor.cpp  CardLegality.cpp  CardType.cpp  README.md  card_parser.cpp  etl_pipeline.cpp  loader.cpp  scryfall_client.cpp  transformer.cpp  utils.cpp  warehouse.cpp
tests/: CMakeLists.txt  test_card_parser.cpp  test_transformer.cpp
